--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,6 +180,17 @@
   font-size: 20px;
 }
 
+.form-container__cancel {
+  margin-top: 20px;
+  width: 300px;
+  height: 50px;
+  background-color: #a1a1a1;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 20px;
+}
+
 .form-container__submit:focus {
   outline: none;
 }
